fix(mobile) Toast popup - wrong position [OAPTAU-408]
- fixed margins and paddings of toasts

--- a/tau/src/css/profile/mobile/changeable/common/toast.less
+++ b/tau/src/css/profile/mobile/changeable/common/toast.less
@@ -6,7 +6,7 @@
 	.ui-popup-content {
 		position: relative;
 		margin-bottom: 64 * @unit_base;
-		margin-top: 8 * @unit_base;
+		margin-top: 20 * @unit_base;
 		width: auto;
 		max-width: 620 * @unit_base;
 		display: inline-block;
@@ -14,7 +14,7 @@
 		.transform(translate(-50%));
 		.core_popup_noti_bg();
 
-		padding: 16 * @unit_base 36 * @unit_base;
+		padding: 11 * @unit_base 28 * @unit_base;
 		line-height: 41 * @unit_base;
 		color: @color_toast_text;
 		font-size: @font_size_toast_text;
@@ -26,7 +26,7 @@
 			content: '';
 			width: 100%;
 			height: 100%;
-			margin: -16 * @unit_base -36 * @unit_base -16 * @unit_base;
+			margin: -11 * @unit_base -28 * @unit_base -16 * @unit_base;
 			.core_popup_noti_bg_stroke();
 		}
 
